# sdl-prj

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  all_build.sh
dfgl/: dfgl.c
include/: CMakeLists.txt
include/Game/: CMakeLists.txt  Game.cpp  Game.h
include/TextureManager/: CMakeLists.txt  TextureManager.cpp  TextureManager.h
onlysdl/: onlysdl.cpp  sdlfw.cpp
sdlfw/: sdlfw.cpp
src/: main.cpp
